--- a/css/style.css
+++ b/css/style.css
@@ -213,9 +213,11 @@ header {
 }
 
 .background1 {
-    position: absolute;
+    position: relative;
     display: flex;
     flex-direction: row;
+    width: 100%;
+    height: 100%;
 }
 
 .background1 img {
