--- a/css/style.css
+++ b/css/style.css
@@ -778,6 +778,8 @@ header {
 }
 
 .img-text1-content1-container2 img {
+    position: relative;
+    right: calc(105 / 1920 * 100vw);
     width:  calc(879 / 1920 * 100vw);
     height:  calc(586 / 1080 * 100vh);
     object-fit: contain;
