--- a/css/style.css
+++ b/css/style.css
@@ -5007,22 +5007,21 @@ header {
 }
 
 .case-studies-time {
-    display: flex;
+    display: none;
     flex-direction: column;
-    width: calc(153 / 1920 * 100vw);
+    width: calc(487 / 1920 * 100vw);
+    height: calc(191 / 1080 * 100vh);
     align-items: flex-start;
     justify-content: center;
-    gap: 9.79px;
-    padding: calc(10.17 / 1080 * 100vh) calc(8.39 / 1920 * 100vw);
-    position: absolute;
-    top: calc(623 / 1080 * 100vh);
-    left: 0;
-    background-color: #94ace840;
-    border-radius: 3.81px;
-    border: 0.25px solid;
-    border-color: #ffffff;
-    backdrop-filter: blur(3.81px) brightness(100%);
-    -webkit-backdrop-filter: blur(3.81px) brightness(100%);
+    gap: calc(31.21 / 1080 * 100vh);
+    padding: calc(32 / 1080 * 100vh) calc(26 / 1920 * 100vw);
+    position: fixed;
+    top: calc(746 / 1080 * 100vh);
+    left: calc(496 / 1920 * 100vw);
+    background-color: rgba(148, 172, 232, 0.25);
+    border-radius: calc(12.11 / 1080 * 100vh);
+    border: calc(0.81 / 1080 *100vh) solid #FFF;
+    backdrop-filter: blur(6.0777459144592285px);
 }
 
 .case-studies-text-wrapper-2 {
@@ -5032,8 +5031,8 @@ header {
     font-family: "Gordita-Medium", Helvetica;
     font-weight: 500;
     color: #ffffff;
-    font-size: calc(11.2 / 1920 * 100vw);
-    letter-spacing: calc(-0.45 / 1920 * 100vw);
+    font-size: calc(35.656 / 1920 * 100vw);
+    letter-spacing: calc(-1.42 / 1920 * 100vw);
     line-height: normal;
     white-space: nowrap;
 }
@@ -5041,13 +5040,31 @@ header {
 .case-studies-p {
     position: relative;
     align-self: stretch;
-    height: calc(17.92 / 1080 * 100vh);
+    height: calc(57.12 / 1080 * 100vh);
     font-family: "PP Neue Montreal-Medium", Helvetica;
     font-weight: 500;
     color: var(--white);
-    font-size: calc(6.6 / 1920 * 100vw);
+    font-size: calc(20 / 1920 * 100vw);
     letter-spacing: 0;
-    line-height: calc(8.3 / 1080 * 100vh);
+    line-height: 126%;
+}
+
+.before-text {
+    position: fixed;
+    top: calc(387 / 1080 * 100vh);
+    left: calc(496 / 1920 * 100vw);
+    width: calc(97 / 1920 * 100vw);
+    height: calc(35 / 1080 * 100vh);
+    display: none;
+}
+
+.scroll-text {
+    position: fixed;
+    top: calc(893.05 / 1080 * 100vh);
+    right: calc(78.43 / 1920 * 100vw);
+    width: calc(103 / 1920 * 100vw);
+    height: calc(36.5 / 1080 * 100vh);
+    display: none;
 }
 
 .case-studies-img {
@@ -5057,13 +5074,6 @@ header {
     top: calc(5089 / 1080 * 100vh);
     left: -18457px;
     object-fit: cover;
-}
-
-.case-studies-bar-box {
-    display: none;
-    position: relative;
-    width: calc(340 / 1920 * 100vw);
-    height: calc(514 / 1080 * 100vh);
 }
 
 .case-studies-bar-case-studies {
