--- a/css/style.css
+++ b/css/style.css
@@ -5015,6 +5015,37 @@ header {
     z-index: 3;
 }
 
+.case-studies-DSC-2 {
+    scale: 0;
+    opacity: 0;
+    background-image: url('../media/icons/content-home/DSC_3147\ 3.png');
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: calc(0 / 1080 * 100vh);
+    left: calc(0 / 1920 * 100vw);
+    background-size: cover;
+    background-position: center;
+    border-radius: calc(22 / 1080 * 100vh) calc(22 / 1080 * 100vh) 0 0;
+    z-index: 3;
+}
+
+.case-studies-DSC-4 {
+    scale: 0;
+    opacity: 0;
+    background-image: url('../media/icons/content-home/Noa0206-3\ 1.png');
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: calc(0 / 1080 * 100vh);
+    left: calc(0 / 1920 * 100vw);
+    background-size: cover;
+    background-position: center;
+    border-radius: calc(38 / 1080 * 100vh);
+    border-radius: calc(22 / 1080 * 100vh) calc(22 / 1080 * 100vh) 0 0;
+    z-index: 3;
+}
+
 .case-studies-time {
     display: none;
     flex-direction: column;
@@ -5058,6 +5089,17 @@ header {
     font-size: calc(20 / 1920 * 100vw);
     letter-spacing: 0;
     line-height: 126%;
+}
+
+.procedural-video {
+    position: fixed;
+    top: calc(60 / 1080 * 100vh);
+    left: calc(30 / 1920 * 100vw);
+    width: calc(250 / 1920 * 100vw);
+    height: calc(35 / 1080 * 100vh);
+    z-index: 3;
+    object-fit: contain;
+    opacity: 0;
 }
 
 .before-text {
