--- a/css/responsive.css
+++ b/css/responsive.css
@@ -201,7 +201,111 @@ header {
     height: 380px;
     object-fit: contain;
 }
+
+.title-content4-container1 span {
+    font-size: calc(26 / 430 * 100vw);
+}
+
+.title-content4-container1 {
+    margin: 140px 0 50px 0;
+    font-size: calc(26 / 430 * 100vw);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.img-text-content4-container1 {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+}
+
+.img-content4-container1 {
+    height: 278px;
+}
+
+.img-content4-container1 img {
+    height: 278px;
+    width: calc(406 / 430 * 100vw);
+}
+
+.text-content4-container1 {
+    margin: 55px 0 0 calc(25 / 430 * 100vw);
+}
+
+.text-content4-container1 h3 {
+    color: #94ACE8;
+    font-size: calc(20 / 430 * 100vw);
+    font-style: normal;
+    font-weight: 500;
+    line-height: 130%;
+    letter-spacing: calc(-0.8 / 430 * 100vw);
+    margin-left: calc(1 / 430 * 100vw);
+}
+
+.text1-content4-container1 {
+    margin-top: 35px;
+    gap: calc(10 / 430 * 100vw);
+}
+.text1-content4-container1 svg {
+    width: calc(34 / 430 * 100vw);
+    height: 34px;
+    object-fit: contain;
+}
+.text1-content4-container1 p {
+    color: #707C93;
+    font-family: var(--paragraph-24px-book-font-family);
+    font-size: calc(16 / 430 * 100vw);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 130%;
+}
+
+.text2-content4-container1 {
+    margin: 40px 0;
+    gap: calc(10 / 430 * 100vw);
+}
+.text2-content4-container1 svg {
+    width: calc(34 / 430 * 100vw);
+    height: 34px;
+    object-fit: contain;
+}
+.text2-content4-container1 p {
+    color: #707C93;
+    font-family: var(--paragraph-24px-book-font-family);
+    font-size: calc(16 / 430 * 100vw);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 130%;
+}
+
+.text3-content4-container1 {
+    gap: calc(10 / 430 * 100vw);
+}
+.text3-content4-container1 svg {
+    width: calc(34 / 430 * 100vw);
+    height: 34px;
+    object-fit: contain;
+}
+.text3-content4-container1 p {
+    color: #707C93;
+    font-family: var(--paragraph-24px-book-font-family);
+    font-size: calc(16 / 430 * 100vw);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 130%;
+}
 /* Container1 End */
+
+/* Container2 */
+.content-container2 {
+    padding: 0;
+}
+
+.background-content-container2 {
+    margin: 104px 0 0 calc(17 / 430 * 100vw);
+}
+/* Container2 End */
 
 /* Home End*/
 }
