--- a/css/responsive.css
+++ b/css/responsive.css
@@ -340,10 +340,11 @@ header {
 }
 
 .text1-content1-container2 {
-    margin: 67px 0 0 0;
+    margin: 67px 0 0 calc(33.75 / 430 * 100vw);
     display: flex;
     flex-direction: column-reverse;
     gap: 40px;
+    align-items: normal;
 }
 
 .img-text1-content1-container2 {
@@ -359,7 +360,78 @@ header {
     width: calc(488 / 430 * 100vw);
     height: 325px;
     border-radius: 15px;
-    left: calc(28 / 430 * 100vw);
+    left: calc(15 / 430 * 100vw);
+}
+
+.title-text1-content1-container2 {
+    gap: 11px;
+    width: calc(365 / 430* 100vw);
+}
+.title-text1-content1-container2 h3 {
+    color: var(--Alternative-BLue, #94ACE8);
+    font-family: Gordita;
+    font-size: calc(21 / 430 * 100vw);
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: calc(-0.84 / 430 * 100vw);
+}
+.title-text1-content1-container2 p {
+    color: var(--Paragraph-gray, #707C93);
+    font-family: var(--paragraph-24px-book-font-family);
+    font-size: calc(13 / 430 * 100vw);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    margin-left: calc(-0.75 / 430 * 100vw);
+}
+
+.text2-content1-container2 {
+    margin: 66px 0 0 calc(33.75 / 430* 100vw);
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 40px;
+    align-items: normal;
+}
+
+.img-text2-content1-container2 {
+    width: calc(363 / 430* 100vw);
+    height: 263px;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+    background: linear-gradient(101deg, #FFF 3.27%, #B7D0FF 27.11%, #D9E6FD 75.74%);
+}
+.img-text2-content1-container2 img {
+    height: 260px;
+    width: calc(238 / 430 * 100vw);
+    border-radius: 0 0 15px 0;
+    object-fit: cover;
+}
+
+.title-text2-content1-container2 {
+    gap: 11px;
+    width: calc(365 / 430* 100vw);
+}
+.title-text2-content1-container2 h3 {
+    color: var(--Alternative-BLue, #94ACE8);
+    font-family: Gordita;
+    font-size: calc(21 / 430 * 100vw);
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: calc(-0.84 / 430 * 100vw);
+}
+.title-text2-content1-container2 p {
+    color: var(--Paragraph-gray, #707C93);
+    font-family: var(--paragraph-24px-book-font-family);
+    font-size: calc(13 / 430 * 100vw);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    margin-left: calc(-0.75 / 430 * 100vw);
+    width: calc(365 / 430* 100vw);
 }
 /* Container2 End */
 
