--- a/css/responsive.css
+++ b/css/responsive.css
@@ -508,6 +508,10 @@ header {
     letter-spacing: calc(-1.28 / 430 * 100vw);
 }
 
+.content2-container2 {
+    margin-bottom: 74.86px;
+}
+
 .all-doctors-cards-container{
     display: flex;
     flex-direction: column;
@@ -552,6 +556,99 @@ header {
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+}
+
+.content3-container2 {
+    margin: 33px 0 0 calc(17 / 430 * 100vw);
+}
+
+.background-content3-container2 {
+    width: calc(396 / 430 * 100vw);
+    height: 1626px;
+    border-radius: 15px;
+    border: 0.321px solid #1F4283;
+    margin: 0;
+}   
+.img-background-content3-container2 {
+    border-radius: 15px;
+}
+
+.title-content3-container2 {
+    margin: 57px 0 11px 0;
+    color: #FFF;
+    text-align: center;
+    font-family: Gordita;
+    font-size: calc(12 / 430 * 100vw);
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: calc(1.56 / 430 * 100vw);
+}
+
+.subtitle-content3-container2 {
+    color: #FFF;
+    text-align: center;
+    font-family: Gordita;
+    font-size: calc(32 / 430 * 100vw);
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: calc(-1.28 / 430 * 100vw);
+    margin-bottom: 61px;
+    display: flex;
+    flex-direction: column;
+}
+
+.cards-content3-container2 {
+    display: flex;
+    flex-direction: column;
+    gap: 28px;
+}
+
+.content-card-content3-container2 {
+    width: calc(325 / 430 * 100vw);
+    height: 440px;
+    padding: 11.538px calc(11.538 / 430 * 100vw);
+    border-radius: 19.231px;
+}
+.content-card-content3-container2 img {
+    width: calc(301.923 / 430 * 100vw);
+    height: 201.282px;
+    border-radius: 19.231px;
+}
+.content-card-content3-container2 h3 {
+    color: #1F4283;
+    text-align: center;
+    font-family: Gordita;
+    font-size: calc(20.513 / 430 * 100vw);
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: calc(-0.821 / 430 * 100vw);
+}
+.content-card-content3-container2 p {
+    color: #707C93;
+    text-align: center;
+    font-family: var(--paragraph-24px-book-font-family);
+    font-size: calc(15.385 / 430 * 100vw);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+}
+.content-card-content3-container2 button {
+    padding: 12.821px calc(30.769 / 430 * 100vw);
+    width: calc(115.54 / 430 * 100vw);
+    height: 42.64px;
+    border-radius: 9.615px;
+    background: #1F4283;
+    color: #FFF;
+    text-align: center;
+    font-family: Gordita;
+    font-size: calc(16.026 / 430 * 100vw);
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: calc(-0.641 / 430 * 100vw);
 }
 /* Container2 End */
 
