--- a/css/style.css
+++ b/css/style.css
@@ -1266,6 +1266,7 @@ header {
     justify-content: center;
     position: relative;
     flex: 0 0 auto;
+    gap: calc(35 / 1080 * 100vh);
 }
 
 .container3-upload-your-case-in {
@@ -1283,12 +1284,11 @@ header {
 
 .container3-p {
     position: relative;
-    width: calc(554 / 1920 * 100vw);
+    width: auto;
     font-family: "PP Neue Montreal", Helvetica;
     font-weight: 400;
     color: #707c93;
     font-size: calc(24 / 1920 * 100vw);
-    font-size: calc(0 / 1920 * 1920px);
     line-height: 150%;
     font-style: normal;
 }
@@ -1317,12 +1317,11 @@ header {
 
 .container3-text-wrapper-4 {
     position: relative;
-    width: calc(629 / 1920 * 100vw);
+    width: auto;
     font-family: "PP Neue Montreal", Helvetica;
     font-weight: 400;
     color: rgba(112, 124, 147, 1);
     font-size: calc(24 / 1920 * 100vw);
-    font-size: calc(0 / 1920 * 1920px);
     line-height: 150%;
     font-style: normal;
 }
